2003-09-25  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/smtp/camel-smtp-transport.c (smtp_helo): If the
	localhost lookup results in a numeric IPv6 host, use the form
	"[IPv6:<addr>]" as specified in rfc2821. Fixes bug #46006.

2003-09-23  Ettore Perazzoli  <ettore@ximian.com>

	* providers/local/camel-local-provider.c: Set the IS_STORAGE bit
	in the mbox provider, since it can now contain a hierarchy of
	folders.

2003-09-23  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/local/camel-mbox-store.c (get_folder): If the CREATE
	flag is set and the parent .sbd directory does not exist, create
	it.

	* camel-mime-utils.c (append_8bit): Don't forget to flush the
	iconv conversion.

	* tests/message/test4.c (main): Don't try dot-files.

2003-09-22  Not Zed  <NotZed@Ximian.com>

	** See bug #41610
	
	* providers/pop3/camel-pop3-folder.c (cmd_tocache): protect a
	divide by 0 for 0 length messages.

2003-09-22  Not Zed  <NotZed@Ximian.com>

	* providers/imap/camel-imap-provider.c: Added "offline_sync"
	option, which lets you synchronise all mail to local storage
	automagically.

	* camel-disco-folder.c (cdf_folder_changed): hook onto the folder
	changed single, for all new messages, check that they are online
	using another thread, if the offline_sync option has been enabled
	for this store.

2003-09-21  Not Zed  <NotZed@Ximian.com>

	* camel-session.c (session_thread_destroy): call proper entry
	point for freeing the message.

2003-09-18  Not Zed  <NotZed@Ximian.com>

	* camel-folder.c (filter_filter): register the filtering process
	for progress, and do progress of the filtering process.

2003-09-17  Not Zed  <NotZed@Ximian.com>

	* camel.c (camel_init): init camel operation.

	* camel-operation.c (camel_operation_reset): removed, not used,
	not worth it.
	(camel_operation_mute): new method to stop all status updates
	permanently.
	(*): Changed to use thread specific data and a list rather than a
	hashtable.
	(cancel_thread): removed.